针对红米手机，实现基本的临时root方法，启动秒装功能